Referenciando os posts do usuário